# employee_hierarchy

./: .env  .env-example  .env-nondev  .env-render  .gitignore  Dockerfile  Dockerfile-render  Makefile  README.md  Tasks.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: main.yml
docker/: app.sh
employee_hierarchy/: settings-dev.py  settings.py  urls.py  views.py
employee_hierarchy/datagen/: dataloader.py
employees/: filters.py  forms.py  mixins.py  models.py  serializers.py  tests.py  urls.py  views.py
employees/fixtures/: employees.json  user.json
employees/migrations/: 0001_initial.py  0002_alter_employee_date_offered_and_more.py  0003_remove_employee_salary_gte_50000_rub_and_more.py  0004_alter_employee_supervisor.py  0005_employee_photo_alter_employee_job_title.py
employees/templatetags/: my_tags.py
scripts/: seed.py
templates/: base.html  form.html  index.html
templates/components/: footer.html  navbar.html  pagination.html
templates/employees/: create.html  employee_create.html  employee_delete.html  employee_detail.html  employee_form.html  employees.html  employees_index.html  index.html
