[tool.poetry]
name = "employee-hierarchy"
version = "0.1.0"
description = "test assignments"
authors = ["NikolayZemelko <zemelko1989@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.7"
django-extensions = "^3.2.3"
flake8 = "^6.1.0"
psycopg = "^3.1.12"
django-filter = "^23.3"
gunicorn = "^21.2.0"
python-dotenv = "0.21.1"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2023.10"
django-bootstrap5 = "^23.3"
dj-database-url = "^2.1.0"
django-rest-framework = "^0.1.0"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.3.1"
django-ckeditor = "^6.7.0"
pillow = "^10.1.0"

[tool.poetry.group.dev.dependencies]
Faker = "^19.13.0"
django-seeder = "^0.1.0"
coverage = "^7.3.2"
argparse = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
